# soupx-python

./: README.md  pyproject.toml
notebooks/: soupx_validation_results.csv  test_soupx_basics.ipynb
notebooks/.ipynb_checkpoints/: test_soupx_basics-checkpoint.ipynb
soupx/: __init__.py  core.py  correction.py  estimation.py
