[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soupx-python"
version = "0.3.0"
description = "Python implementation of SoupX for removing ambient RNA contamination from droplet-based single-cell RNA sequencing data"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-2.0"}
authors = [
    {name = "Nicolas Ruffini", email = "nicolas.ruffini@posteo.de"},
]
keywords = ["single-cell", "RNA-seq", "bioinformatics", "decontamination", "ambient-RNA", "soupx"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core dependencies (analyzed from your code)
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "statsmodels>=0.12.0",
]

[project.optional-dependencies]
# For load10X function and scanpy integration
scanpy = [
    "scanpy>=1.8.0",
    "anndata>=0.7.0", 
    "h5py>=3.0.0"
]

# For development
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "black>=21.0.0",
    "flake8>=3.8.0", 
    "mypy>=0.812"
]

# All optional dependencies
all = [
    "scanpy>=1.8.0",
    "anndata>=0.7.0",
    "h5py>=3.0.0"
]

[project.urls]
Homepage = "https://github.com/NiRuff/soupx-python"
Repository = "https://github.com/NiRuff/soupx-python"
"Bug Tracker" = "https://github.com/NiRuff/soupx-python/issues"

[tool.setuptools.packages.find]
include = ["soupx*"]

[tool.black]
line-length = 88
target-version = ['py38']